Invoice: remove height: min-content attribute to fix footer on Firefox

--- a/app/javascript/stylesheets/_stack.scss
+++ b/app/javascript/stylesheets/_stack.scss
@@ -76,7 +76,6 @@
 }
 
 main.stack {
-  height: min-content;
   margin: spacer(4) auto;
   max-width: $main-stack-width;
   width: calc(100% - 2 * #{spacer(4)});
